--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,5 +1,20 @@
 <body>
   <div class="container">
-      <list-patient></list-patient>
+      <h2>{{title}}</h2>
+    <hr>
+
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a routerLink="patients" class="btn btn-primary active" role="button" routerLinkActive="active">Pacientes</a>
+            </li>
+            <li class="nav-item" style="margin-left: 10px;">
+                <a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
+            </li>
+        </ul>
+
+    </nav>
+    <router-outlet></router-outlet>
   </div>
 </body>
