--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,7 +1,5 @@
 <body>
   <div class="container">
-      <h2>{{title}}</h2>
-    <hr>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <!-- Links -->
@@ -10,7 +8,7 @@
                 <a routerLink="patients" class="btn btn-primary active" role="button" routerLinkActive="active">Pacientes</a>
             </li>
             <li class="nav-item" style="margin-left: 10px;">
-                <a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Add</a>
+                <a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Marcar Consulta</a>
             </li>
         </ul>
 
