--- a/ClientApp/src/app/create-patient/create-patient.component.html
+++ b/ClientApp/src/app/create-patient/create-patient.component.html
@@ -8,7 +8,7 @@
 
         <div class="form-group">
             <label for="dataNascimento">Data Nascimento:</label>
-            <input type="text" class="form-control" id="dataNascimento" required [(ngModel)]="dataNascimento" 
+            <input type="text" class="form-control" id="dataNascimento" required [(ngModel)]="dataNascimento"
             autocomplete="off" name="dataNascimento" placeholder="Data" bsDatepicker [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY' }">
         </div>
 
@@ -22,7 +22,7 @@
                 <label for="horaInicio">Horário do inicio da consulta:</label>
             <input class="form-control" name="horaInicio" [(ngModel)]="patient.horaInicio" [textMask]="{mask: mask}" >
         </div>
-    
+
         <div class="form-group">
                 <label for="horaFim">Horário do fim da consulta:</label>
             <input class="form-control" name="horaFim" [(ngModel)]="patient.horaFim" [textMask]="{mask: mask}" >
@@ -38,5 +38,5 @@
 </div>
 
 <div [hidden]="!submitted">
-    <h4>You submitted successfully!</h4>
+    <h4>Solicitação enviada!</h4>
 </div>
