--- a/ClientApp/src/app/patient-list/patient-list.component.html
+++ b/ClientApp/src/app/patient-list/patient-list.component.html
@@ -26,16 +26,73 @@
         <tr *ngFor="let patient of patients | filter:searchText">
           <td class="hidden">{{patient.id}}</td>
           <td>{{ patient.nome }}</td>
-          <td class="formatarData">{{ patient.dataNascimento }}</td>
-          <td class="formatarData">{{ patient.dataConsulta }}</td>
+          <td class="formatarData">{{ dataFormate(patient.dataNascimento) }}</td>
+          <td class="formatarData">{{ dataFormate(patient.dataConsulta) }}</td>
           <td>{{ patient.horaInicio }} às {{ patient.horaFim }}</td>
           <td>{{ patient.observacao }}</td>
           <td><button class="btn btn-danger btn-padrao" tooltip="Desmarcar consulta" (click)="deletePatient(patient.id)"><i
                 class="fa fa-trash" style="color:black"></i></button> <hr>
-            <button class="btn btn-warning btn-padrao" tooltip="Editar consulta" (click)="editPatient(patient)"><i
+            <button class="btn btn-warning btn-padrao" tooltip="Editar consulta" (click)="openModal(template); getPatient(patient.id)"><i
                 class="fa fa-edit"></i></button></td>
         </tr>
       </tbody>
     </table>
+    <ng-template #template>
+      <div class="modal-header">
+          <h4 class="modal-title pull-left">Editar Consulta</h4>
+          <button type="button" class="close pull-right"
+                  aria-label="Close" (click)="modalRef.hide()">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      </div>
+      <div class="modal-body">
+          <div>
+              <div class="form-group">
+                <label for="Id">Id: </label>
+                <span id="" required [(ngModel)]="patientEdit.id" name="Id"></span>
+              </div>
+              <div [hidden]="submitted" style="width: 400px;">
+                <form (ngSubmit)="onSubmit()">
+
+                  <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input type="text" class="form-control" id="nome" required [(ngModel)]="patientEdit.nome" name="nome">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="dataNascimento">Data Nascimento:</label>
+                    <input type="text" class="form-control" id="dataNascimento" required [(ngModel)]="dataNascimentoEdit"
+                      autocomplete="off" name="dataNascimento" placeholder="Data" bsDatepicker
+                      [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY' }">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="dataConsulta">Data da consulta:</label>
+                    <input type="text" class="form-control" id="dataConsulta" required [(ngModel)]="dataConsultaEdit" autocomplete="off"
+                      name="dataConsulta" placeholder="Data" bsDatepicker [bsConfig]="{ dateInputFormat: 'DD/MM/YYYY' }">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="horaInicio">Horário do inicio da consulta:</label>
+                    <input class="form-control" name="horaInicio" [(ngModel)]="patientEdit.horaInicio" [textMask]="{mask: mask}">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="horaFim">Horário do fim da consulta:</label>
+                    <input class="form-control" name="horaFim" [(ngModel)]="patientEdit.horaFim" [textMask]="{mask: mask}">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="observacao">Observações:</label>
+                    <textarea class="form-control" id="observacao" required [(ngModel)]="patientEdit.observacao"
+                      name="observacao"></textarea>
+                  </div>
+
+                  <button type="submit" class="btn btn-success">Salvar</button>
+                </form>
+              </div>
+            </div>
+      </div>
+  </ng-template>
   </div>
 </div>
