--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -2,16 +2,14 @@
   <div class="container">
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <!-- Links -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a routerLink="patients" class="btn btn-primary active" role="button" routerLinkActive="active">Pacientes</a>
-            </li>
-            <li class="nav-item" style="margin-left: 10px;">
-                <a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Marcar Consulta</a>
-            </li>
-        </ul>
-
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a routerLink="patients" class="btn btn-primary active" role="button" routerLinkActive="active">Consultas</a>
+        </li>
+        <li class="nav-item" style="margin-left: 10px;">
+          <a routerLink="add" class="btn btn-primary active" role="button" routerLinkActive="active">Marcar Consulta</a>
+        </li>
+      </ul>
     </nav>
     <router-outlet></router-outlet>
   </div>
