--- a/ClientApp/src/app/patient-list/patient-list.component.css
+++ b/ClientApp/src/app/patient-list/patient-list.component.css
@@ -1,4 +1,8 @@
 .btn-padrao{
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
+}
+
+.btn-padding-bottom{
+    padding-bottom: 5px;
 }
